Modificando a captação de dados do addres para input no selector

--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -27,7 +27,9 @@
 
   <!-- Address -->
   <section id="address" class="my-5">
-    <app-address></app-address>
+    <app-address
+      [addressData]="data.address"
+    ></app-address>
   </section>
   <!-- End Address -->
 
