Atulizando captacao de dados do features component

--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -12,7 +12,9 @@
 
   <!-- Features -->
   <section id="features" class="my-5">
-    <app-features></app-features>
+    <app-features
+    [featureData] = "data.features"
+    ></app-features>
   </section>
   <!-- End Features -->
 
