Adicionado o Output e o elementCreated para todos os childrens do appComponent

--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -1,12 +1,17 @@
 <!-- Navbar -->
-<app-header></app-header>
+<app-header
+(elementCreated)="onElementCreated($event)"
+>
+</app-header>
 <!-- End Navbar -->
 
 <!-- Main -->
 <main id="main">
   <!-- Carousel -->
   <section id="carousel">
-    <app-carousel></app-carousel>
+    <app-carousel
+    (elementCreated)="onElementCreated($event)"
+    ></app-carousel>
   </section>
   <!-- End Carousel -->
 
@@ -14,6 +19,7 @@
   <section id="features" class="my-5">
     <app-features
     [featureData] = "data.features"
+    (elementCreated)="onElementCreated($event)"
     ></app-features>
   </section>
   <!-- End Features -->
@@ -31,13 +37,17 @@
   <section id="address" class="my-5">
     <app-address
       [addressData]="data.address"
+      (elementCreated)="onElementCreated($event)"
     ></app-address>
   </section>
   <!-- End Address -->
 
   <!-- Contact -->
   <section id="contact" class="my-5">
-    <app-contact (sendForm)="onContactFormSubmitted($event)"></app-contact>
+    <app-contact
+    (sendForm)="onContactFormSubmitted($event)"
+    (elementCreated)="onElementCreated($event)"
+    ></app-contact>
   </section>
   <!-- End Contact -->
 
@@ -50,5 +60,8 @@
 <!-- End Main -->
 
 <!-- Footer -->
-<app-footer></app-footer>
+<app-footer
+(elementCreated)="onElementCreated($event)"
+>
+</app-footer>
 <!-- End Footer -->
