Adicionando funcao ao botao de search (Feito pelo appcomponent)

--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Navbar -->
 <app-header
 (elementCreated)="onElementCreated($event)"
+(searchString)="onSearchClicked($event)"
 >
 </app-header>
 <!-- End Navbar -->
