--- a/site/src/app/components/header/header.component.html
+++ b/site/src/app/components/header/header.component.html
@@ -37,8 +37,10 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          name="search"
+          [(ngModel)]="userInput"
         />
-        <a class="btn btn-outline-light" href="#"
+        <a class="btn btn-outline-light" href="#" (click)="searchString.emit(userInput)"
           >Search</a
         >
       </form>
